Client details alignment issues

--- a/src/app/pages/Clients/client-details/client-details.page.scss
+++ b/src/app/pages/Clients/client-details/client-details.page.scss
@@ -1,1 +1,7 @@
- 
+ ion-col{
+     h6{
+        margin: 5px 0px;
+        font-size: 12px;
+        font-weight: 500;
+     }
+ }
