--- a/src/app/pages/Clients/view-clients/view-clients.page.scss
+++ b/src/app/pages/Clients/view-clients/view-clients.page.scss
@@ -7,3 +7,11 @@ ion-col{
         }
     }
 }
+form{
+    width:100%;
+}
+ion-item{
+    .item-native{
+        padding-left:0px !important;
+    }
+}
